TEST_PROGRAMS/INVALID/02/missingpackage.go
//no package
func main(){
    println("not valid");
}
